samples/invalid/eval/local_shadowing.g
language g0

bad outer = \outer -> outer
asm.result = ""
